<resources>
    <string name="app_name">RunTrackerSP22</string>
    <string name="coordinates">Coordinates go here</string>
    <string name="coordinateDisplay">%1$f|%2$f</string>
    <string name="permission_required">Location permission is required to display the current location.</string>
    <string name="ok">OK</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_denied_rationale">The app requires access to the location information to track runs.\nPlease grant access in the settings menu.</string>
    <string name="permission_granted">Permission is granted. The app can track the location of your run.</string>
    <string name="nogps">Unable to turn on GPS</string>
    <string name="separator_main">:</string>
    <string name="separator_tenths">.</string>
    <string name="zero_value_1">0</string>
    <string name="zero_value_2">00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">End Run</string>
    <string name="map">View Map</string>
    <string name="content_text">Select to view stopwatch!</string>
    <string name="stopwatch">View Stopwatch</string>
    <string name="resume">Resume</string>
    <string name="notification_channel_name">RunTracker</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>